--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>タイトル</title>
+    <title>FFBE 幻影戦争 攻略</title>
   </head>
   <body>
-    ここに書きたい内容を書く
+    <table>
+      <tr>
+        <th>stage</th>
+        <th>敵数</th>
+        <th>ドロップアイテム数</th>
+      </tr>
+      <tr>
+        <td>1-1-1</td>
+        <td>2</td>
+        <td>2</td>
+      </tr>
+    </table>
   </body>
 </html>
