--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>FFBE 幻影戦争 攻略</title>
   </head>
   <body>
-    <table>
+    <table border="1">
       <tr>
         <th>stage</th>
         <th>敵数</th>
