--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
   <body>
     <table border="1">
       <tr>
-        <th>stage</th>
+        <th>ステージ</th>
+        <th>タイトル</th>
+        <th>推奨</th>
         <th>敵数</th>
-        <th>ドロップアイテム数</th>
+        <th>ドロップアイテム</th>
       </tr>
       <tr>
-        <td>1-1-1</td>
-        <td>2</td>
-        <td>2</td>
+        <td>第１部第1章第3節</td>
+        <td>廃墟の影</td>
+        <td>Unit LV: 11 JOB Lv: 3</td>
+        <td>5</td>
+        <td>佇む地龍像・碧</td>
       </tr>
     </table>
   </body>
