--- a/index.html
+++ b/index.html
@@ -19,6 +19,55 @@
         <td>5</td>
         <td>佇む地龍像・碧</td>
       </tr>
+      <tr>
+        <td>イベント</td>
+        <td>【高難度】修練の間（橘）C</td>
+        <td>Unit LV: 50 JOB Lv: 10</td>
+        <td>5</td>
+        <td>佇む地龍像・碧</td>
+      </tr>
+      <tr>
+        <td>イベント</td>
+        <td>セレクションクエスト（土）#1</td>
+        <td>Unit LV: 1 JOB Lv: 1</td>
+        <td>3</td>
+        <td>微かな記憶・翠 / 祈る天使像・翠 / 土の輝石・翠 </td>
+      </tr>
+      <tr>
+        <td>イベント</td>
+        <td>セレクションクエスト（土）#2</td>
+        <td>Unit LV: 10 JOB Lv: 3</td>
+        <td>5</td>
+        <td>微かな記憶・翠 / 佇む地龍像・翠 / 土の輝石・翠 </td>
+      </tr>
+      <tr>
+        <td>イベント</td>
+        <td>セレクションクエスト（土）#3</td>
+        <td>Unit LV: 30 JOB Lv: 5</td>
+        <td>5</td>
+        <td>微かな記憶・碧 / 祈る天使像・碧 / 土の輝石・碧 </td>
+      </tr>
+      <tr>
+        <td>イベント</td>
+        <td>セレクションクエスト（土）#4</td>
+        <td>Unit LV: 40 JOB Lv: 8</td>
+        <td>5</td>
+        <td>微かな記憶・碧 / 佇む地龍像・碧 / 土の輝石・碧 </td>
+      </tr>
+      <tr>
+        <td>イベント</td>
+        <td>セレクションクエスト（土）#5</td>
+        <td>Unit LV: 50 JOB Lv: 9</td>
+        <td>5</td>
+        <td>微かな記憶・紫 / 祈る天使像・紫 / 土の輝石・紫 </td>
+      </tr>
+      <tr>
+        <td>イベント</td>
+        <td>セレクションクエスト（土）#6</td>
+        <td>Unit LV: 60 JOB Lv: 9</td>
+        <td>5</td>
+        <td>微かな記憶・紫 / 佇む地龍像・紫 / 土の輝石・紫 </td>
+      </tr>
     </table>
   </body>
 </html>
